# courswork

TheaterBookingSystem/: Film.h  StandUpComedy.cpp  StandUpComedy.h  TheaterBookingSystem.cpp  TheaterBookingSystem.depend  TheaterBookingSystem.layout  main.cpp
TheaterBookingSystem/include/: Event.h  LiveMusic.h
TheaterBookingSystem/src/: Event.cpp  StandupComedy.h
client/client/: client.cbp  main.cpp
courseWork-1/: Cusotmer.cpp  Cusotmer.h  Customer.cpp  Customer.h  Film.h  Makefile  TheaterBooking.cpp  TheaterBooking.h  TheaterUtility.cpp  TheaterUtility.h  courseWork-1.cbp  courseWork-1.depend  courseWork-1.layout  events.txt  events_customer.txt  main.cpp  staff_info.txt
courseWork-1/Customer/: Film.h  LiveMusic.h  TheaterBooking.cpp  TheaterUtility.cpp  main.cpp
du/: CMakeLists.txt  main.cpp
prac-10/: CMakeLists.txt  Customer.cpp  Film.cpp  TheaterBooking.cpp  TheaterUtility.cpp  TheaterUtility.h  events.txt  main.cpp
prac-10/test/: CMakeLists.txt  test.cpp
prac-2/: Event.h  Film.h  Makefile  main.cpp
prac-3/: Film.h  Makefile  StandupComedy.cpp  TheaterBooking.cpp  events.txt  main.cpp
prac-4/: Cusotmer.cpp  Cusotmer.h  Event.cpp  TheaterBooking.cpp  main.cpp
prac-8/: CMakeLists.txt  Event.h  Makefile  Makefile-1  StandupComedy.h  TheaterBooking.h  TheaterUtility.cpp  TheaterUtility.h  main.cpp
prac-8/tests/: CMakeLists.txt  test.cpp
prac-9/: Customer.h  LiveMusic.cpp  TheaterUtility.cpp  main.cpp
prac-9/tests/: CMakeLists.txt  test.cpp
