add_executable(course-work-test
    test.cpp
    ../TheaterUtility.h 
    ../TheaterUtility.cpp 
    ../Customer.cpp 
    ../Customer.h 
    ../TheaterBooking.cpp 
    ../TheaterBooking.h 
    ../Event.cpp 
    ../Event.h 
    ../Film.cpp 
    ../Film.h 
    ../LiveMusic.cpp 
    ../LiveMusic.h ../StandupComedy.h ../StandupComedy.cpp
    catch.hpp
)